timeware/src/objects/Employee_Schedule__c.object
<CustomObject>
    <description>Master-Detail relationship with Employee (Master) object.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Five__c</fullName>
        <label>Department Five</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>R00N70000002IZKeEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Four__c</fullName>
        <label>Department Four</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>R00N70000002IZKdEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_One__c</fullName>
        <label>Department One</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>R00N70000002IZMBEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Seven__c</fullName>
        <label>Department Seven</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>R00N70000002IZOPEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Six__c</fullName>
        <label>Department Six</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>R00N70000002IZOOEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Three__c</fullName>
        <label>Department Three</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>R00N70000002IZOEEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Two__c</fullName>
        <label>Department Two</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipName>R00N70000002IZKcEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipName>R00N70000002IOY3EAO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Five__c</fullName>
        <label>Job Five</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>R00N70000002Ib9yEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Four__c</fullName>
        <label>Job Four</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>R00N70000002Ib9vEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_One__c</fullName>
        <label>Job One</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>R00N70000002Ib9oEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Seven__c</fullName>
        <label>Job Seven</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>R00N70000002IbA3EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Six__c</fullName>
        <label>Job Six</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>R00N70000002Ib9wEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Three__c</fullName>
        <label>Job Three</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>R00N70000002Ib9uEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Two__c</fullName>
        <label>Job Two</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>R00N70000002Ib9tEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Five__c</fullName>
        <label>Schedule Five</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipName>R00N70000002IOlVEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Four__c</fullName>
        <label>Schedule Four</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipName>R00N70000002IOlQEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_One_Label__c</fullName>
        <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE (2000 ,1, 1) ,7),0,&quot;Sunday&quot;,1,&quot;Monday&quot;,2,&quot;Tuesday&quot;,3,&quot;Wednesday&quot;,4,&quot;Thursday&quot;,5,&quot;Friday&quot;,6,&quot;Saturday&quot; ,&quot;ERROR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule One Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_One__c</fullName>
        <label>Schedule One</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipName>R00N70000002IOhUEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Seven__c</fullName>
        <label>Schedule Seven</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipName>R00N70000002IOlWEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Six__c</fullName>
        <label>Schedule Six</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipName>R00N70000002IOlaEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Three__c</fullName>
        <label>Schedule Three</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipName>R00N70000002IOiDEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Two__c</fullName>
        <label>Schedule Two</label>
        <referenceTo>Schedule__c</referenceTo>
        <relationshipName>R00N70000002IOhFEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week_Ending_Date__c</fullName>
        <label>Week Ending Date</label>
        <type>Date</type>
    </fields>
    <label>Employee Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ES-{000000}</displayFormat>
        <label>Employee Schedules ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>